<resources>
    <string name="app_name">Quiz Earn</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="_1_10">1/10</string>
    <string name="_24">24</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo2">TODO</string>
    <string name="update_profile">Update Profile</string>
    <string name="current_coins">Current Coins</string>
    <string name="required_to_withdraw">10000 coins required to withdraw</string>
    <string name="number">Enter Number</string>
    <string name="send_request">SEND REQUEST</string>
    <string name="_1">#100</string>
    <string name="moneytext">You Will Received Your Withdrawal in 24 Hours 100% guaranteed, Minimum Withdraw 10 Rs. Money, If You
     Faced Any Problems With The Payment You Can Contact Us.. Thanks for Using Our App.</string>
    <string name="realIncome">Your Real Income is = 1000 -> Rs 1</string>
    <string name="ruleShare">Rule: if you will share to friends and if they will created a account then you will get 5000 coins on each friends as well as your friend will get 5000 coins.</string>
    <string name="shareText">Hey Hey Hey!!&#128525;&#128525;&#128525;</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="paymentMethod">Select Payment Type</string>
    <string name="enterCoin">Enter coins for withdraw</string>
    <string name="load">Load . . . .</string>
    <string name="quiz_result">Quiz Result</string>
    <string name="quiz_earn">Quiz Earn</string>
    <string name="by_coderaman">By CoderAman</string>
    <string name="logout">Logout</string>
    <string name="name">Name =</string>
    <string name="payment_type">Payment Type =</string>
    <string name="googlepay">GooglePay</string>
    <string name="coins">Coins =</string>
    <string name="rs100">Rs100</string>
    <string name="send_time">Send Time =</string>
    <string name="payment_status">Payment Status =</string>

</resources>