<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Light_grey"
    tools:context="com.tech.coderamankumarguptaquizearn.WalletFragment">

    <View
        android:id="@+id/view7"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_90sdp"
        android:background="@drawable/background_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text = "@string/realIncome"
        android:gravity = "center"
        android:fontFamily = "@font/roboto_bold"
        android:textColor = "@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/view6"
        android:layout_width="0dp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/rounded_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/current_coins"
        android:textColor="@color/color_white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toTopOf="@+id/view6" />

    <TextView
        android:id="@+id/currentCoins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/color_white"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/required_to_withdraw"
        android:textColor="@color/color_white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/currentCoins"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/currentCoins"
        app:layout_constraintTop_toBottomOf="@+id/currentCoins" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/paymentMethod"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/view6"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/payOptionBtn"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintEnd_toStartOf="@+id/paymentTypeBox"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/paymentTypeBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:gravity="center"
        android:background = "@drawable/textbox"
        android:textSize="14dp"
        android:textColor = "@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/number"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/textbox"
        android:drawablePadding="@dimen/_8sdp"
        android:ems="10"
        android:hint="@string/number"
        android:layout_marginTop="@dimen/_2sdp"
        android:inputType="phone"
        android:padding="@dimen/_12sdp"
        android:textSize="18dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toBottomOf="@+id/payOptionBtn"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/numberOfCoins"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/textbox"
        android:drawableStart="@drawable/coins"
        android:drawablePadding="@dimen/_8sdp"
        android:ems="10"
        android:hint="@string/enterCoin"
        android:inputType="phone"
        android:padding="@dimen/_12sdp"
        android:textSize="18dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/number"
        app:layout_constraintStart_toStartOf="@+id/number"
        app:layout_constraintTop_toBottomOf="@+id/number"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/sendRequestBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/button_3"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/send_request"
        android:textSize="14dp"
        android:textColor="@color/color_white"
        android:visibility="visible"
        app:backgroundTint="#3c599f"
        app:layout_constraintEnd_toEndOf="@+id/numberOfCoins"
        app:layout_constraintStart_toStartOf="@+id/numberOfCoins"
        app:layout_constraintTop_toBottomOf="@+id/numberOfCoins" />

    <ProgressBar
        android:id="@+id/progressBarId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/currentCoins"
        app:layout_constraintTop_toTopOf="@+id/currentCoins" />


</androidx.constraintlayout.widget.ConstraintLayout>