<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tech.coderamankumarguptaquizearn.QuizActivity">


    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_110sdp"
        android:background="@drawable/background_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

    <ProgressBar
        android:id="@+id/progressBarId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:drawablePadding="@dimen/_8sdp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/_24"
        android:textColor="@color/color_white"
        android:textSize="19dp"
        app:drawableStartCompat="@drawable/timer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:drawablePadding="@dimen/_8sdp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/_1_10"
        android:textColor="@color/color_white"
        app:drawableRightCompat="@drawable/question_mark"
        app:drawableTint="@color/color_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_14sdp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/load"
        android:textColor="@color/color_white"
        android:textSize="19dp"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        app:srcCompat="@drawable/fiftyfiftyline" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        app:srcCompat="@drawable/audiencepoll" />

    <TextView
        android:id="@+id/option_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/option_unselected"
        android:onClick="onClick"
        android:padding="@dimen/_10sdp"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/option_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/option_unselected"
        android:onClick="onClick"
        android:padding="@dimen/_10sdp"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/option_1"
        app:layout_constraintStart_toStartOf="@+id/option_1"
        app:layout_constraintTop_toBottomOf="@+id/option_1"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/option_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/option_unselected"
        android:onClick="onClick"
        android:padding="@dimen/_10sdp"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/option_2"
        app:layout_constraintStart_toStartOf="@+id/option_2"
        app:layout_constraintTop_toBottomOf="@+id/option_2"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/option_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/option_unselected"
        android:onClick="onClick"
        android:padding="@dimen/_10sdp"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/option_3"
        app:layout_constraintStart_toStartOf="@+id/option_3"
        app:layout_constraintTop_toBottomOf="@+id/option_3"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/quitBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="@drawable/button_1"
        android:onClick="onClick"
        android:text="Quit"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:backgroundTint="#FF5722"
        app:layout_constraintBottom_toTopOf="@+id/banner_Ad"
        app:layout_constraintEnd_toStartOf="@+id/Nextbtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option_4"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/Nextbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/button_2"
        android:onClick="onClick"
        android:text="Next"
        android:textColor="@color/color_white"
        android:textSize="14dp"
        app:backgroundTint="#1A7E1E"
        app:layout_constraintBottom_toTopOf="@+id/banner_Ad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/quitBtn"
        app:layout_constraintTop_toBottomOf="@+id/option_4"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/banner_Ad"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>